<resources>
    <string name="app_name">Control Room</string>
    <string name="action_settings">Settings</string>
    <string name="title">My NanoDegree Apps !</string>
    <string name="media_streamer">SPOTIFY STREAMER</string>
    <string name="super_duo1">SCORES APP</string>
    <string name="super_duo2">LIBRARY APP</string>
    <string name="build_bigger">BUILD IT BIGGER</string>
    <string name="reader">XYZ READER</string>
    <string name="capstone">CAPSTONE</string>
</resources>
